update qweno1 tip

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Modellwechsel",
   "Suitable for most tasks": "Für die meisten Aufgaben geeignet",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Für die meisten Aufgaben geeignet, Leistung vergleichbar mit GPT-4o",
-  "Take photos to solve math problems": "Fotos machen, um mathematische Probleme zu lösen",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Denken Sie tief und erreichen Sie in Aufgaben wie Mathematik und kreativer Schriftstellerei die gleiche Leistung wie o3, Fotos machen, um mathematische Probleme zu lösen",
   "Support image recognition": "Unterstützung der Bilderkennung",
   
   "Optimize code writing": "Die Code-Schreibweise optimieren",
