--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Model Değiştir",
   "Suitable for most tasks": "Çoğu görev için uygundur",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Çoğu görev için uygundur, Performansı GPT-4o ile karşılaştırılabilir",
-  "Take photos to solve math problems": "Matematik problemleri çözmek için fotoğraf çekmek",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Derin düşünceler yapın ve matematik ve yaratıcı yazma gibi görevlerde o3'ün performansına ulaşın, Matematik problemleri çözmek için fotoğraf çekmek",
   "Support image recognition": "Görüntü tanıma desteği sağlar",
   "Optimize code writing": "Kod yazımını optimize et",
   "Please select at least one model.": "Lütfen en az bir model seçin.",
