--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Chuyển đổi mô hình",
   "Suitable for most tasks": "Thích hợp cho hầu hết các nhiệm vụ",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Phù hợp cho hầu hết các nhiệm vụ. Hiệu năng tương đương với GPT-4o",
-  "Take photos to solve math problems": "Chụp ảnh để giải quyết các bài toán",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Hãy suy nghĩ sâu sắc và đạt hiệu suất tương đương với o3 trong các nhiệm vụ như toán học và viết sáng tạo, Chụp ảnh để giải quyết các bài toán",
   "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
   "Optimize code writing": "Tối ưu hóa việc viết mã",
   "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
