--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "",
   "Suitable for most tasks": "",
   "Suitable for most tasks,Performance comparable to GPT-4o": "",
-  "Take photos to solve math problems": "",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "",
   "Support image recognition": "",
   "Optimize code writing": "",
   "Please select at least one model.": "",
