--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Mudar modelos",
   "Suitable for most tasks": "Apropriado para a maioria das tarefas",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Adequado para a maioria das tarefas, Desempenho comparável ao do GPT-4o",
-  "Take photos to solve math problems": "Tirar fotos para resolver problemas de matemática",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Pense profundamente e iguale o desempenho do o3 em tarefas como matemática e escrita criativa, Tirar fotos para resolver problemas de matemática",
   "Support image recognition": "Suporte para o reconhecimento de imagens",
   "Optimize code writing": "Otimizar a escrita de código",
   "Please select at least one model.": "Por favor, selecione pelo menos um modelo.",
