--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -689,7 +689,7 @@
   "Switch Models": "切换模型",
   "Suitable for most tasks": "适用于大多数任务",
   "Suitable for most tasks,Performance comparable to GPT-4o": "适用于大多数任务，性能比肩GPT-4o",
-  "Take photos to solve math problems": "使用高级推理，可拍照解数学题",
+  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "深度思考，在数学、创意写作等任务性能上比肩o3, 可拍照解数学题",
   "Support image recognition": "支持图片识别",
   "Optimize code writing": "优化写代码功能",
   "Please select at least one model.": "请至少选择一个模型。",
