update tip language

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "",
   "Suitable for most tasks": "",
   "Suitable for most tasks,Performance comparable to GPT-4o": "",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "",
   "Support image recognition": "",
   "Optimize code writing": "",
   "Please select at least one model.": "",
@@ -817,7 +817,7 @@
   "YouTube Search": "",
   "Twitter Search": "",
   "Web Searching ...": "",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "",
   "A single IP address can be used for a maximum of two KYC verifications": "",
   "Check kyc failed, Please try again.": "",
