--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Cambiar modelos",
   "Suitable for most tasks": "Adecuado para la mayoría de las tareas",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Apto para la mayoría de las tareas, Rendimiento comparable al de GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Piensa profundamente y alcanza un rendimiento similar al de o3 en tareas como matemáticas y escritura creativa, Tomar fotos para resolver problemas de matemáticas",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Pensamiento profundo, habilidades matemáticas y de escritura ≈ o3, resolver problemas matemáticos tomando fotos.",
   "Support image recognition": "Soporte para el reconocimiento de imágenes",
   "Optimize code writing": "Optimizar la escritura de código",
   "Please select at least one model.": "Por favor, seleccione al menos un modelo.",
@@ -817,7 +817,7 @@
   "YouTube Search": "Búsqueda YouTube",
   "Twitter Search": "Búsqueda Twitter",
   "Web Searching ...": "Buscando en la web ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Piensa profundamente y alcanza un rendimiento similar al de o3 en tareas como matemáticas y escritura creativa",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "Pensamiento profundo, habilidades matemáticas y de escritura ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "La verificación KYC está limitada a una vez cada 10 minutos. Por favor, inténtelo de nuevo más tarde.",
   "A single IP address can be used for a maximum of two KYC verifications": "Una sola dirección IP se puede utilizar un máximo de dos veces para las verificaciones KYC.",
   "Check kyc failed, Please try again.": "La verificación KYC ha fallado. Por favor, inténtelo de nuevo.",
