--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -689,7 +689,7 @@
   "Switch Models": "Changer de modèles",
   "Suitable for most tasks": "Adapté à la plupart des tâches",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Adapté à la plupart des tâches, Performances comparables à celles de GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Réfléchissez profondément et égalisez les performances d'o3 dans des tâches telles que les mathématiques et l'écriture créative, Prendre des photos pour résoudre des problèmes de mathématiques",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Pensée approfondie, capacités mathématiques et d'écriture ≈ o3, résoudre des problèmes mathématiques en prenant des photos",
   "Support image recognition": "Prise en charge de la reconnaissance d'images",
   "Optimize code writing": "Optimiser l'écriture de code",
   "Please select at least one model.": "Veuillez sélectionner au moins un modèle.",
@@ -816,7 +816,7 @@
   "YouTube Search": "Recherche sur le YouTube",
   "Twitter Search": "Recherche sur le Twitter",
   "Web Searching ...": "Recherche en cours sur le web ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Réfléchissez profondément et égalisez les performances d'o3 dans des tâches telles que les mathématiques et l'écriture créative",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "Pensée approfondie, capacités mathématiques et d'écriture ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "La vérification KYC est limitée à une fois toutes les 10 minutes. Veuillez réessayer plus tard.",
   "A single IP address can be used for a maximum of two KYC verifications": "Une seule adresse IP peut être utilisée au maximum deux fois pour les vérifications KYC.",
   "Check kyc failed, Please try again.": "La vérification KYC a échoué. Veuillez réessayer.",
