--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Ganti model",
   "Suitable for most tasks": "Cocok untuk sebagian besar tugas",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Cocok untuk sebagian besar tugas, Kinerja sebanding dengan GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Pikirkan secara mendalam dan cocokkan kinerja o3 dalam tugas seperti matematika dan penulisan kreatif, Mengambil foto untuk menyelesaikan masalah matematika",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Pemikiran mendalam, kemampuan matematika dan penulisan ≈ o3, menyelesaikan masalah matematika dengan mengambil foto",
   "Support image recognition": "Mendukung pengenalan gambar",
   "Optimize code writing": "Mengoptimalkan penulisan kode",
   "Please select at least one model.": "Silakan pilih setidaknya satu model.",
@@ -817,7 +817,7 @@
   "YouTube Search": "Pencarian YouTube",
   "Twitter Search": "Pencarian Twitter",
   "Web Searching ...": "Sedang melakukan pencarian web ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Pikirkan secara mendalam dan cocokkan kinerja o3 dalam tugas seperti matematika dan penulisan kreatif",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "Pemikiran mendalam, kemampuan matematika dan penulisan ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Verifikasi KYC dibatasi hanya boleh dilakukan sekali setiap 10 menit. Silakan coba lagi nanti.",
   "A single IP address can be used for a maximum of two KYC verifications": "Sebuah alamat IP tunggal dapat digunakan maksimal untuk dua kali verifikasi KYC.",
   "Check kyc failed, Please try again.": "Verifikasi KYC gagal. Silakan coba lagi.",
