--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "モデルを切り替える",
   "Suitable for most tasks": "多くのタスクに適しています",
   "Suitable for most tasks,Performance comparable to GPT-4o": "ほとんどのタスクに適しています, 性能は GPT-4o に匹敵します",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "深く考え、数学や創作的な文章執筆などのタスクにおいて o3 のパフォーマンスに匹敵する成果を出す, 数学問題を解決するために写真を撮る",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "深い思考、数学的能力と執筆能力は o3 に匹敵し、写真を撮って数学の問題を解くことができます",
   "Support image recognition": "画像認識をサポートしています",
   "Optimize code writing": "コードの書き方を最適化します",
   "Please select at least one model.": "少なくとも 1 つのモデルを選択してください。",
@@ -817,7 +817,7 @@
   "YouTube Search": "YouTube 検索",
   "Twitter Search": "Twitter 検索",
   "Web Searching ...": "ウェブ検索中...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "深く考え、数学や創作的な文章執筆などのタスクにおいて o3 のパフォーマンスに匹敵する成果を出す",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "深い思考、数学的能力と執筆能力は o3 に匹敵し",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 認証は 10 分に 1 回までに制限されています，後でもう一度お試しください。",
   "A single IP address can be used for a maximum of two KYC verifications": "単一の IP アドレスは、最大で 2 回の KYC 認証に使用できます。",
   "Check kyc failed, Please try again.": "KYC 認証に失敗しました。もう一度試してください。",
