--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Mudar modelos",
   "Suitable for most tasks": "Apropriado para a maioria das tarefas",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Adequado para a maioria das tarefas, Desempenho comparável ao do GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Pense profundamente e iguale o desempenho do o3 em tarefas como matemática e escrita criativa, Tirar fotos para resolver problemas de matemática",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Pensamento profundo, habilidades matemáticas e de escrita ≈ o3, resolver problemas matemáticos tirando fotos",
   "Support image recognition": "Suporte para o reconhecimento de imagens",
   "Optimize code writing": "Otimizar a escrita de código",
   "Please select at least one model.": "Por favor, selecione pelo menos um modelo.",
@@ -817,7 +817,7 @@
   "YouTube Search": "Pesquisa na YouTube",
   "Twitter Search": "Pesquisa na Twitter",
   "Web Searching ...": "Pesquisando na web ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Pense profundamente e iguale o desempenho do o3 em tarefas como matemática e escrita criativa",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "Pensamento profundo, habilidades matemáticas e de escrita ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "A verificação KYC é limitada a uma vez a cada 10 minutos. Por favor tente novamente mais tarde.",
   "A single IP address can be used for a maximum of two KYC verifications": "Um único endereço IP pode ser usado no máximo duas vezes para verificações KYC.",
   "Check kyc failed, Please try again.": "A verificação KYC falhou. Por favor, tente novamente.",
