--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -689,7 +689,7 @@
   "Switch Models": "Переключить модели",
   "Suitable for most tasks": "Подходит для большинства задач",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Подходит для большинства задач, Производительность сравнима с GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Думайте глубоко и достигайте такого же уровня выполнения, как o3, в таких задачах, как математика и креативная писательство, Сделать фотографии для решения математических задач",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Глубокое мышление, математические и писательские способности ≈ o3, решение математических задач с помощью фотографирования",
   "Support image recognition": "Поддерживает распознавание изображений",
   "Optimize code writing": "Оптимизировать написание кода",
   "Please select at least one model.": "Пожалуйста, выберите хотя бы один модель.",
@@ -816,7 +816,7 @@
   "YouTube Search": "поиск на YouTube",
   "Twitter Search": "поиск на Twitter",
   "Web Searching ...": "Выполняется поиск в интернете ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Думайте глубоко и достигайте такого же уровня выполнения, как o3, в таких задачах, как математика и креативная писательство",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "Глубокое мышление, математические и писательские способности ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Верификация KYC ограничена одной процедурой каждые 10 минут, Пожалуйста, попробуйте еще раз позже.",
   "A single IP address can be used for a maximum of two KYC verifications": "Одна IP - адрес может быть использована максимум дважды для верификации KYC.",
   "Check kyc failed, Please try again.": "Верификация KYC не удалась. Пожалуйста, попробуйте еще раз.",
