--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -689,7 +689,7 @@
   "Switch Models": "สลับแบบจำลอง",
   "Suitable for most tasks": "เหมาะสำหรับงานส่วนใหญ่",
   "Suitable for most tasks,Performance comparable to GPT-4o": "เหมาะสำหรับงานส่วนใหญ่ ความสามารถเปรียบเทียบได้กับ GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "คิดอย่างลึกซึ้งและให้ประสิทธิภาพเท่ากับ o3 ในการทำงานเช่น คณิตศาสตร์ และการเขียนสร้างสรรค์ ถ่ายรูปเพื่อแก้ปัญหาคณิตศาสตร์",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "ความคิดลึกซึ้ง ความสามารถทางคณิตศาสตร์และทางการเขียน ≈ o3 แก้โจทย์คณิตศาสตร์ด้วยการถ่ายรูป",
   "Support image recognition": "รองรับการจำแนกภาพ",
   "Optimize code writing": "ปรับปรุงการเขียนโค้ด",
   "Please select at least one model.": "กรุณาเลือกแบบจำลองอย่างน้อยหนึ่งแบบ",
@@ -816,7 +816,7 @@
   "YouTube Search": "การค้นหาใน YouTube",
   "Twitter Search": "การค้นหาใน Twitter",
   "Web Searching ...": "กำลังค้นหาเว็บ ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "คิดอย่างลึกซึ้งและให้ประสิทธิภาพเท่ากับ o3 ในการทำงานเช่น คณิตศาสตร์ และการเขียนสร้างสรรค์",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "ความคิดลึกซึ้ง ความสามารถทางคณิตศาสตร์และทางการเขียน ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "การยืนยัน KYC จำกัดให้ทำได้เพียงครั้งเดียว ทุกๆ 10 นาที โปรดลองอีกครั้งในภายหลัง",
   "A single IP address can be used for a maximum of two KYC verifications": "ที่อยู่ IP เดียวสามารถใช้สำหรับการยืนยัน KYC ได้สูงสุดสองครั้ง",
   "Check kyc failed, Please try again.": "การยืนยัน KYC ล้มเหลว โปรดลองอีกครั้ง",
