--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Model Değiştir",
   "Suitable for most tasks": "Çoğu görev için uygundur",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Çoğu görev için uygundur, Performansı GPT-4o ile karşılaştırılabilir",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Derin düşünceler yapın ve matematik ve yaratıcı yazma gibi görevlerde o3'ün performansına ulaşın, Matematik problemleri çözmek için fotoğraf çekmek",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Derin düşünme, matematiksel ve yazı yazma yetenekleri ≈ o3, matematik problemlerini fotoğraf çekerek çözebilir",
   "Support image recognition": "Görüntü tanıma desteği sağlar",
   "Optimize code writing": "Kod yazımını optimize et",
   "Please select at least one model.": "Lütfen en az bir model seçin.",
@@ -817,7 +817,7 @@
   "YouTube Search": "YouTube araması",
   "Twitter Search": "Twitter araması",
   "Web Searching ...": "Web'de aranıyor ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Derin düşünceler yapın ve matematik ve yaratıcı yazma gibi görevlerde o3'ün performansına ulaşın",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "Derin düşünme, matematiksel ve yazı yazma yetenekleri ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC doğrulaması her 10 dakikada bir kez yapılabilir, Lütfen daha sonra tekrar deneyin.",
   "A single IP address can be used for a maximum of two KYC verifications": "Tek bir IP adresi en fazla iki kez KYC doğrulaması için kullanılabilir.",
   "Check kyc failed, Please try again.": "KYC doğrulaması başarısız oldu. Lütfen tekrar deneyin.",
