--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Modellwechsel",
   "Suitable for most tasks": "Für die meisten Aufgaben geeignet",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Für die meisten Aufgaben geeignet, Leistung vergleichbar mit GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Denken Sie tief und erreichen Sie in Aufgaben wie Mathematik und kreativer Schriftstellerei die gleiche Leistung wie o3, Fotos machen, um mathematische Probleme zu lösen",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Tiefes Denken, mathematische und schreibende Fähigkeiten ≈ o3, Mathematikprobleme durch Fotografieren lösen",
   "Support image recognition": "Unterstützung der Bilderkennung",
   
   "Optimize code writing": "Die Code-Schreibweise optimieren",
@@ -818,7 +818,7 @@
   "YouTube Search": "YouTube suche",
   "Twitter Search": "Twitter suche",
   "Web Searching ...": "Websuche läuft ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Denken Sie tief und erreichen Sie in Aufgaben wie Mathematik und kreativer Schriftstellerei die gleiche Leistung wie o3",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "Tiefes Denken, mathematische und schreibende Fähigkeiten ≈ o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Die KYC-Verifizierung ist auf einmal alle 10 Minuten beschränkt. Bitte versuchen Sie es später erneut.",
   "A single IP address can be used for a maximum of two KYC verifications": "Eine einzelne IP-Adresse kann maximal zweimal für die KYC-Verifizierung verwendet werden.",
   "Check kyc failed, Please try again.": "Die KYC-Prüfung ist fehlgeschlagen. Bitte versuchen Sie es erneut.",
