--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "모델 전환",
   "Suitable for most tasks": "대부분의 작업에 적합합니다",
   "Suitable for most tasks,Performance comparable to GPT-4o": "대부분의 작업에 적합합니다, 성능은 GPT-4o 과 견줍니다",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "심층적으로 생각하고 수학 및 창작 글쓰기와 같은 작업에서 o3의 성과에 맞먹을 수 있도록 하기, 수학 문제를 해결하기 위해 사진을 찍는다",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "깊은 사고, 수학적 능력과 창작 능력은 o3과 비슷하며, 사진을 찍어 수학 문제를 해결할 수 있습니다",
   "Support image recognition": "이미지 인식을 지원합니다",
   "Optimize code writing": "코드 작성 최적화합니다",
   "Please select at least one model.": "적어도 하나의 모델을 선택하세요.",
@@ -817,7 +817,7 @@
   "YouTube Search": "YouTube 검색",
   "Twitter Search": "Twitter 검색",
   "Web Searching ...": "웹 검색 중...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "심층적으로 생각하고 수학 및 창작 글쓰기와 같은 작업에서 o3의 성과에 맞먹을 수 있도록 하기",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "깊은 사고, 수학적 능력과 창작 능력은 o3과 비슷하며",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 인증은 10분에 한 번으로 제한됩니다, 나중에 다시 시도해 주세요.",
   "A single IP address can be used for a maximum of two KYC verifications": "단일 IP 주소는 최대 두 번의 KYC 인증에 사용할 수 있습니다.",
   "Check kyc failed, Please try again.": "KYC 인증에 실패했습니다. 다시 시도해 주세요.",
