--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -690,7 +690,7 @@
   "Switch Models": "Chuyển đổi mô hình",
   "Suitable for most tasks": "Thích hợp cho hầu hết các nhiệm vụ",
   "Suitable for most tasks,Performance comparable to GPT-4o": "Phù hợp cho hầu hết các nhiệm vụ. Hiệu năng tương đương với GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "Hãy suy nghĩ sâu sắc và đạt hiệu suất tương đương với o3 trong các nhiệm vụ như toán học và viết sáng tạo, Chụp ảnh để giải quyết các bài toán",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "Tư duy sâu sắc, khả năng toán học và năng lực viết văn xunge o3, giải quyết các bài toán Toán bằng cách chụp ảnh",
   "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
   "Optimize code writing": "Tối ưu hóa việc viết mã",
   "Please select at least one model.": "Vui lòng chọn ít nhất một mô hình.",
@@ -806,7 +806,7 @@
   "YouTube Search": "Tìm kiếm trên YouTube",
   "Twitter Search": "Tìm kiếm trên Twitter",
   "Web Searching ...": "Đang tìm kiếm trên web ...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "Hãy suy nghĩ sâu sắc và đạt hiệu suất tương đương với o3 trong các nhiệm vụ như toán học và viết sáng tạo",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "Tư duy sâu sắc, khả năng toán học và năng lực viết văn xunge o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "Xác minh KYC chỉ được thực hiện một lần mỗi 10 phút, Vui lòng thử lại sau.",
   "A single IP address can be used for a maximum of two KYC verifications": "Một địa chỉ IP duy nhất có thể được sử dụng tối đa hai lần cho việc xác minh KYC.",
   "Check kyc failed, Please try again.": "Xác minh KYC đã thất bại. Vui lòng thử lại.",
