--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -689,7 +689,7 @@
   "Switch Models": "切换模型",
   "Suitable for most tasks": "适用于大多数任务",
   "Suitable for most tasks,Performance comparable to GPT-4o": "适用于大多数任务，性能比肩GPT-4o",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing, Take photos to solve math problems": "深度思考，在数学、创意写作等任务性能上比肩o3, 可拍照解数学题",
+  "Deep thinking,mathematical and writing abilities ≈ o3, taking photos to solve math problems": "深度思考，在数学、创意写作等任务性能上比肩o3, 可拍照解数学题",
   "Support image recognition": "支持图片识别",
   "Optimize code writing": "优化写代码功能",
   "Please select at least one model.": "请至少选择一个模型。",
@@ -816,7 +816,7 @@
   "YouTube Search": "YouTube 搜索",
   "Twitter Search": "Twitter 搜索",
   "Web Searching ...": "正在进行网络搜索...",
-  "Think deeply and match the performance of o3 in tasks such as mathematics and creative writing": "深度思考，在数学、创意写作等任务性能上比肩o3",
+  "Deep thinking,mathematical and writing abilities ≈ o3": "深度思考，在数学、创意写作等任务性能上比肩o3",
   "KYC verification is limited to once every 10 minutes, Please try again later.": "KYC 认证每 10 分钟只能进行一次。请稍后再试。",
   "A single IP address can be used for a maximum of two KYC verifications": "单个 IP 地址最多可用于两次 KYC 认证。",
   "Check kyc failed, Please try again.": "KYC 验证失败。请再次尝试。",
