--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -830,5 +830,8 @@
   "starttime": "Heure de début",
   "endtime": "Heure de fin",
   "Enter Name": "Entrez votre nom",
-  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "Déterminez de quoi il s'agit dans la dernière question et affichez uniquement les termes de recherche associés, avec un maximum de 30 caractères."
+  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "Déterminez de quoi il s'agit dans la dernière question et affichez uniquement les termes de recherche associés, avec un maximum de 30 caractères.",
+  "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Le nombre d'essais a dépassé la limite. Veuillez passer à l'abonnement VIP.",
+  "The number of attempts has exceeded the limit. Please complete KYC.": "Le nombre d'essais a dépassé la limite. Veuillez terminer le KYC.",
+  "The number of attempts has exceeded the limit. Please create Wallet.": "Le nombre d'essais a dépassé la limite. Veuillez créer un portefeuille."
 }
