--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -831,5 +831,8 @@
   "starttime": "시작 시간",
   "endtime": "종료 시간",
   "Enter Name": "이름을 입력하세요",
-  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "마지막 질문의 내용이 무엇인지 판단하고 관련 검색어만 출력하며 최대 30자를 넘기지 않도록 합니다."
+  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "마지막 질문의 내용이 무엇인지 판단하고 관련 검색어만 출력하며 최대 30자를 넘기지 않도록 합니다.",
+  "The number of attempts has exceeded the limit. Please upgrade to VIP.": "시도 횟수가 제한을 초과했습니다. VIP로 업그레이드하십시오.",
+  "The number of attempts has exceeded the limit. Please complete KYC.": "시도 횟수가 제한을 초과했습니다. KYC를 완료하십시오.",
+  "The number of attempts has exceeded the limit. Please create Wallet.": "시도 횟수가 제한을 초과했습니다. 지갑을 생성하십시오."
 }
