--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -830,5 +830,8 @@
   "starttime": "Время начала",
   "endtime": "Время окончания",
   "Enter Name": "Введите ваше имя",
-  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "Определите, о чем идет речь в последнем вопросе, и выведите только 관련ные поисковые термины, не более 30 символов."
+  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "Определите, о чем идет речь в последнем вопросе, и выведите только 관련ные поисковые термины, не более 30 символов.",
+  "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Количество попыток превысило лимит. Пожалуйста, 업грейдите до VIP.",
+  "The number of attempts has exceeded the limit. Please complete KYC.": "Количество попыток превысило лимит. Пожалуйста, выполните процедуру идентификации KYC.",
+  "The number of attempts has exceeded the limit. Please create Wallet.": "Количество попыток превысило лимит. Пожалуйста, создайте кошелек."
 }
