--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -831,5 +831,8 @@
   "starttime": "Başlangıç Saati",
   "endtime": "Bitiş Saati",
   "Enter Name": "Adınızı girin",
-  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "Son sorunun hangi konu hakkında olduğunu belirleyin ve yalnızca ilgili arama terimlerini çıkarın, en fazla 30 karakter."
+  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "Son sorunun hangi konu hakkında olduğunu belirleyin ve yalnızca ilgili arama terimlerini çıkarın, en fazla 30 karakter.",
+  "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Deneme sayısı sınırı aştı. Lütfen VIP'e yükseltin.",
+  "The number of attempts has exceeded the limit. Please complete KYC.": "Deneme sayısı sınırı aştı. Lütfen KYC'yı tamamlayın.",
+  "The number of attempts has exceeded the limit. Please create Wallet.": "Deneme sayısı sınırı aştı. Lütfen bir cüzdan oluşturun."
 }
