--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -831,7 +831,7 @@
   "endtime": "结束时间",
   "Enter Name": "输入名称",
   "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "确定最后一个问题的内容是关于什么的，并且只输出与之相关的搜索词最多30字",
-  "The number of attempts has exceeded the limit. Please upgrade to VIP.": "尝试次数已超过限制。请升级为 VIP。",
-  "The number of attempts has exceeded the limit. Please complete KYC.": "尝试次数已超过限制。请完成实名认证KYC。",
-  "The number of attempts has exceeded the limit. Please create Wallet.": "尝试次数已超过限制。请创建钱包。"
+  "The number of attempts has exceeded the limit. Please upgrade to VIP.": "请求次数已超过限制。请升级为 VIP。",
+  "The number of attempts has exceeded the limit. Please complete KYC.": "请求次数已超过限制。请完成实名认证KYC。",
+  "The number of attempts has exceeded the limit. Please create Wallet.": "请求次数已超过限制。请创建钱包。"
 }
