--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -831,7 +831,7 @@
   "starttime": "",
   "endtime": "",
   "Enter Name": "",
-  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "",
+  "Determine what the content of the last question is about, and only output the content related to it": "",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "",
   "The number of attempts has exceeded the limit. Please complete KYC.": "",
   "The number of attempts has exceeded the limit. Please create Wallet.": ""
