--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -830,7 +830,7 @@
   "starttime": "Heure de début",
   "endtime": "Heure de fin",
   "Enter Name": "Entrez votre nom",
-  "Determine what the last question is about and output only the related search terms, with a maximum of 30 characters.": "Déterminez de quoi il s'agit dans la dernière question et affichez uniquement les termes de recherche associés, avec un maximum de 30 caractères.",
+  "Determine what the content of the last question is about, and only output the content related to it": "Déterminez de quoi s'agit le contenu de la dernière question, et ne sortez que le contenu qui y est lié",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Le nombre d'essais a dépassé la limite. Veuillez passer à l'abonnement VIP.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "Le nombre d'essais a dépassé la limite. Veuillez terminer le KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Le nombre d'essais a dépassé la limite. Veuillez créer un portefeuille."
