--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -832,7 +832,7 @@
   "starttime": "Startzeit",
   "endtime": "Endzeit",
   "Enter Name": "Geben Sie Ihren Namen ein",
-  "Determine what the content of the last question is about, and only output the content related to it": "Ermitteln Sie, worum es sich bei dem Inhalt der letzten Frage handelt, und geben Sie nur den dazugehörigen Inhalt aus",
+  "Determine what the last question is about, filter out repetitive, leading, and non - essential words, and only output the content of the user's question, with a maximum of 10 words.": "Bestimmen Sie, worum es in der letzten Frage geht, filtern Sie wiederholte, leitende und unwichtige Wörter heraus und geben Sie nur den Inhalt der Benutzerfrage aus, mit einem maximalen Wortlängen von 10 Wörtern.",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Die Anzahl der Versuche hat die Grenze überschritten. Bitte aktualisieren Sie auf VIP.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "Die Anzahl der Versuche hat die Grenze überschritten. Bitte führen Sie die KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Die Anzahl der Versuche hat die Grenze überschritten. Bitte erstellen Sie ein Wallet."
