--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -831,7 +831,7 @@
   "starttime": "Waktu mulai",
   "endtime": "Waktu berakhir",
   "Enter Name": "Masukkan nama Anda",
-  "Determine what the content of the last question is about, and only output the content related to it": "Tentukan tentang apa isi pertanyaan terakhir itu, dan hanya keluarkan konten yang terkait dengannya",
+  "Determine what the last question is about, filter out repetitive, leading, and non - essential words, and only output the content of the user's question, with a maximum of 10 words.": "Tentukan topik dari pertanyaan terakhir, saring kata-kata yang berulang, yang mengarahkan, dan yang tidak berharga krusial, dan hanya keluarkan isi dari pertanyaan pengguna, dengan maksimal 10 kata.",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Jumlah percobaan telah melebihi batas. Tolongupgrade ke VIP.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "Jumlah percobaan telah melebihi batas. Tolong selesaikan KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Jumlah percobaan telah melebihi batas. Tolong buat dompet digital Wallet."
