--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -830,7 +830,7 @@
   "starttime": "เวลาเริ่มต้น",
   "endtime": "เวลาสิ้นสุด",
   "Enter Name": "กรุณาป้อนชื่อของคุณ",
-  "Determine what the content of the last question is about, and only output the content related to it": "ระบุว่าข้อความของคำถามล่าสุดเกี่ยวกับเรื่องอะไร และแสดงข้อความที่เกี่ยวข้องกับมันเท่านั้น",
+  "Determine what the last question is about, filter out repetitive, leading, and non - essential words, and only output the content of the user's question, with a maximum of 10 words.": "ระบุว่าคำถามล่าสุดเกี่ยวกับเรื่องอะไร, กรองคำที่ซ้ำซ้อน, ชี้ทาง และไม่มีค่าคร่าวสำคัญออกไป และแสดงเฉพาะเนื้อหาของคำถามจากผู้ใช้ โดยมีจำนวนคำสูงสุด 10 คำเท่านั้น.",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "จำนวนครั้งพยายาม已經เกินขีดจำกัด โปรดอัปเกรดเป็น VIP",
   "The number of attempts has exceeded the limit. Please complete KYC.": "จำนวนครั้งพยายาม已經เกินขีดจำกัด โปรดให้ข้อมูลการยืนยันตัวตน KYC เสร็จสิ้น",
   "The number of attempts has exceeded the limit. Please create Wallet.": "จำนวนครั้งพยายาม已經เกินขีดจำกัด โปรดสร้างกระเป๋าเงิน Digitaล Wallet"
