--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -831,7 +831,7 @@
   "starttime": "Başlangıç Saati",
   "endtime": "Bitiş Saati",
   "Enter Name": "Adınızı girin",
-  "Determine what the content of the last question is about, and only output the content related to it": "Son sorunun içeriğinin hangi konuda olduğunu belirleyin ve sadece buna ilişkin içeriği yazdırın",
+  "Determine what the last question is about, filter out repetitive, leading, and non - essential words, and only output the content of the user's question, with a maximum of 10 words.": "Son sorunun hangi konuda olduğunu belirleyin, tekrarlayan, yönlendiren ve önemli olmayan kelimeleri filtreleyin ve yalnızca kullanıcının soru içeriğini, en fazla 10 kelime olarak yazdırın.",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Deneme sayısı sınırı aştı. Lütfen VIP'e yükseltin.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "Deneme sayısı sınırı aştı. Lütfen KYC'yı tamamlayın.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Deneme sayısı sınırı aştı. Lütfen bir cüzdan oluşturun."
